# email_attachment_downloader

./: .gitignore  download.py  pyproject.toml  unlock.py
email_attachment_downloader/: config.py
email_downloader/: google_utils.py  utils.py
